parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> block
Rule 2     block -> LCURLY statement statement_tail RCURLY
Rule 3     block -> empty
Rule 4     block -> VARIABLE LPAREN expression RPAREN block
Rule 5     statement_tail -> statement statement_tail
Rule 6     statement_tail -> empty
Rule 7     statement -> PRINT LPAREN VARIABLE RPAREN SEMICOLON
Rule 8     statement -> PRINT LPAREN STRING RPAREN SEMICOLON
Rule 9     statement -> PRINT LPAREN expression RPAREN SEMICOLON
Rule 10    statement -> IF LPAREN expression RPAREN block empty
Rule 11    statement -> IF LPAREN expression RPAREN block ELSE block
Rule 12    statement -> WHILE LPAREN expression RPAREN block
Rule 13    statement -> VARIABLE LBRACKET expression RBRACKET ASEQUAL expression SEMICOLON
Rule 14    statement -> VARIABLE ASEQUAL expression SEMICOLON
Rule 15    statement -> VARIABLE ASEQUAL list_index SEMICOLON
Rule 16    statement -> VARIABLE ASEQUAL list SEMICOLON
Rule 17    statement -> list
Rule 18    expression -> expression POWER expression
Rule 19    expression -> expression FLRDIV expression
Rule 20    expression -> expression TIMES expression
Rule 21    expression -> expression DIVIDE expression
Rule 22    expression -> expression PLUS expression
Rule 23    expression -> expression MINUS expression
Rule 24    expression -> expression MOD expression
Rule 25    expression -> expression GREATERTHANEQUAL expression
Rule 26    expression -> expression LESSTHANEQUAL expression
Rule 27    expression -> expression GREATERTHAN expression
Rule 28    expression -> expression LESSTHAN expression
Rule 29    expression -> expression AND expression
Rule 30    expression -> expression OR expression
Rule 31    expression -> expression NOTEQUAL expression
Rule 32    expression -> expression EQUALS expression
Rule 33    expression -> expression IN list
Rule 34    expression -> NOT expression
Rule 35    expression -> LPAREN expression RPAREN
Rule 36    list -> LBRACKET list_elements future_list_elements RBRACKET
Rule 37    list -> list PLUS list
Rule 38    list_elements -> expression
Rule 39    list_elements -> list
Rule 40    list_elements -> empty
Rule 41    future_list_elements -> COMMA expression future_list_elements
Rule 42    future_list_elements -> COMMA list future_list_elements
Rule 43    future_list_elements -> empty_list
Rule 44    expression -> STRING
Rule 45    expression -> REAL
Rule 46    expression -> INTEGER
Rule 47    expression -> STRING LBRACKET INTEGER RBRACKET
Rule 48    expression -> list_index
Rule 49    expression -> VARIABLE
Rule 50    expression -> VARIABLE LPAREN expression RPAREN
Rule 51    list_index -> VARIABLE index_tail
Rule 52    list_index -> list index_tail
Rule 53    index_tail -> LBRACKET expression RBRACKET index_tail
Rule 54    index_tail -> empty
Rule 55    empty_list -> <empty>
Rule 56    empty -> <empty>

Terminals, with rules where they appear

AND                  : 29
ASEQUAL              : 13 14 15 16
COMMA                : 41 42
DIVIDE               : 21
ELSE                 : 11
EQUALS               : 32
FLRDIV               : 19
GREATERTHAN          : 27
GREATERTHANEQUAL     : 25
IF                   : 10 11
IN                   : 33
INTEGER              : 46 47
LBRACKET             : 13 36 47 53
LCURLY               : 2
LESSTHAN             : 28
LESSTHANEQUAL        : 26
LPAREN               : 4 7 8 9 10 11 12 35 50
MINUS                : 23
MOD                  : 24
NOT                  : 34
NOTEQUAL             : 31
OR                   : 30
PLUS                 : 22 37
POWER                : 18
PRINT                : 7 8 9
RBRACKET             : 13 36 47 53
RCURLY               : 2
REAL                 : 45
RPAREN               : 4 7 8 9 10 11 12 35 50
SEMICOLON            : 7 8 9 13 14 15 16
STRING               : 8 44 47
TIMES                : 20
VARIABLE             : 4 7 13 14 15 16 49 50 51
WHILE                : 12
error                : 

Nonterminals, with rules where they appear

block                : 1 4 10 11 11 12
empty                : 3 6 10 40 54
empty_list           : 43
expression           : 4 9 10 11 12 13 13 14 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 34 35 38 41 50 53
future_list_elements : 36 41 42
index_tail           : 51 52 53
list                 : 16 17 33 37 37 39 42 52
list_elements        : 36
list_index           : 15 48
program              : 0
statement            : 2 5
statement_tail       : 2 5

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . block
    (2) block -> . LCURLY statement statement_tail RCURLY
    (3) block -> . empty
    (4) block -> . VARIABLE LPAREN expression RPAREN block
    (56) empty -> .

    LCURLY          shift and go to state 3
    VARIABLE        shift and go to state 5
    $end            reduce using rule 56 (empty -> .)

    program                        shift and go to state 1
    block                          shift and go to state 2
    empty                          shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> block .

    $end            reduce using rule 1 (program -> block .)


state 3

    (2) block -> LCURLY . statement statement_tail RCURLY
    (7) statement -> . PRINT LPAREN VARIABLE RPAREN SEMICOLON
    (8) statement -> . PRINT LPAREN STRING RPAREN SEMICOLON
    (9) statement -> . PRINT LPAREN expression RPAREN SEMICOLON
    (10) statement -> . IF LPAREN expression RPAREN block empty
    (11) statement -> . IF LPAREN expression RPAREN block ELSE block
    (12) statement -> . WHILE LPAREN expression RPAREN block
    (13) statement -> . VARIABLE LBRACKET expression RBRACKET ASEQUAL expression SEMICOLON
    (14) statement -> . VARIABLE ASEQUAL expression SEMICOLON
    (15) statement -> . VARIABLE ASEQUAL list_index SEMICOLON
    (16) statement -> . VARIABLE ASEQUAL list SEMICOLON
    (17) statement -> . list
    (36) list -> . LBRACKET list_elements future_list_elements RBRACKET
    (37) list -> . list PLUS list

    PRINT           shift and go to state 7
    IF              shift and go to state 9
    WHILE           shift and go to state 10
    VARIABLE        shift and go to state 8
    LBRACKET        shift and go to state 11

    statement                      shift and go to state 6
    list                           shift and go to state 12

state 4

    (3) block -> empty .

    $end            reduce using rule 3 (block -> empty .)
    ELSE            reduce using rule 3 (block -> empty .)
    PRINT           reduce using rule 3 (block -> empty .)
    IF              reduce using rule 3 (block -> empty .)
    WHILE           reduce using rule 3 (block -> empty .)
    VARIABLE        reduce using rule 3 (block -> empty .)
    LBRACKET        reduce using rule 3 (block -> empty .)
    RCURLY          reduce using rule 3 (block -> empty .)


state 5

    (4) block -> VARIABLE . LPAREN expression RPAREN block

    LPAREN          shift and go to state 13


state 6

    (2) block -> LCURLY statement . statement_tail RCURLY
    (5) statement_tail -> . statement statement_tail
    (6) statement_tail -> . empty
    (7) statement -> . PRINT LPAREN VARIABLE RPAREN SEMICOLON
    (8) statement -> . PRINT LPAREN STRING RPAREN SEMICOLON
    (9) statement -> . PRINT LPAREN expression RPAREN SEMICOLON
    (10) statement -> . IF LPAREN expression RPAREN block empty
    (11) statement -> . IF LPAREN expression RPAREN block ELSE block
    (12) statement -> . WHILE LPAREN expression RPAREN block
    (13) statement -> . VARIABLE LBRACKET expression RBRACKET ASEQUAL expression SEMICOLON
    (14) statement -> . VARIABLE ASEQUAL expression SEMICOLON
    (15) statement -> . VARIABLE ASEQUAL list_index SEMICOLON
    (16) statement -> . VARIABLE ASEQUAL list SEMICOLON
    (17) statement -> . list
    (56) empty -> .
    (36) list -> . LBRACKET list_elements future_list_elements RBRACKET
    (37) list -> . list PLUS list

    PRINT           shift and go to state 7
    IF              shift and go to state 9
    WHILE           shift and go to state 10
    VARIABLE        shift and go to state 8
    RCURLY          reduce using rule 56 (empty -> .)
    LBRACKET        shift and go to state 11

    statement                      shift and go to state 14
    statement_tail                 shift and go to state 15
    empty                          shift and go to state 16
    list                           shift and go to state 12

state 7

    (7) statement -> PRINT . LPAREN VARIABLE RPAREN SEMICOLON
    (8) statement -> PRINT . LPAREN STRING RPAREN SEMICOLON
    (9) statement -> PRINT . LPAREN expression RPAREN SEMICOLON

    LPAREN          shift and go to state 17


state 8

    (13) statement -> VARIABLE . LBRACKET expression RBRACKET ASEQUAL expression SEMICOLON
    (14) statement -> VARIABLE . ASEQUAL expression SEMICOLON
    (15) statement -> VARIABLE . ASEQUAL list_index SEMICOLON
    (16) statement -> VARIABLE . ASEQUAL list SEMICOLON

    LBRACKET        shift and go to state 18
    ASEQUAL         shift and go to state 19


state 9

    (10) statement -> IF . LPAREN expression RPAREN block empty
    (11) statement -> IF . LPAREN expression RPAREN block ELSE block

    LPAREN          shift and go to state 20


state 10

    (12) statement -> WHILE . LPAREN expression RPAREN block

    LPAREN          shift and go to state 21


state 11

    (36) list -> LBRACKET . list_elements future_list_elements RBRACKET
    (38) list_elements -> . expression
    (39) list_elements -> . list
    (40) list_elements -> . empty
    (18) expression -> . expression POWER expression
    (19) expression -> . expression FLRDIV expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression MOD expression
    (25) expression -> . expression GREATERTHANEQUAL expression
    (26) expression -> . expression LESSTHANEQUAL expression
    (27) expression -> . expression GREATERTHAN expression
    (28) expression -> . expression LESSTHAN expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression NOTEQUAL expression
    (32) expression -> . expression EQUALS expression
    (33) expression -> . expression IN list
    (34) expression -> . NOT expression
    (35) expression -> . LPAREN expression RPAREN
    (44) expression -> . STRING
    (45) expression -> . REAL
    (46) expression -> . INTEGER
    (47) expression -> . STRING LBRACKET INTEGER RBRACKET
    (48) expression -> . list_index
    (49) expression -> . VARIABLE
    (50) expression -> . VARIABLE LPAREN expression RPAREN
    (36) list -> . LBRACKET list_elements future_list_elements RBRACKET
    (37) list -> . list PLUS list
    (56) empty -> .
    (51) list_index -> . VARIABLE index_tail
    (52) list_index -> . list index_tail

    NOT             shift and go to state 26
    LPAREN          shift and go to state 27
    STRING          shift and go to state 28
    REAL            shift and go to state 29
    INTEGER         shift and go to state 30
    VARIABLE        shift and go to state 32
    LBRACKET        shift and go to state 11
    COMMA           reduce using rule 56 (empty -> .)
    RBRACKET        reduce using rule 56 (empty -> .)

    list_elements                  shift and go to state 22
    expression                     shift and go to state 23
    list                           shift and go to state 24
    empty                          shift and go to state 25
    list_index                     shift and go to state 31

state 12

    (17) statement -> list .
    (37) list -> list . PLUS list

    PRINT           reduce using rule 17 (statement -> list .)
    IF              reduce using rule 17 (statement -> list .)
    WHILE           reduce using rule 17 (statement -> list .)
    VARIABLE        reduce using rule 17 (statement -> list .)
    LBRACKET        reduce using rule 17 (statement -> list .)
    RCURLY          reduce using rule 17 (statement -> list .)
    PLUS            shift and go to state 33


state 13

    (4) block -> VARIABLE LPAREN . expression RPAREN block
    (18) expression -> . expression POWER expression
    (19) expression -> . expression FLRDIV expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression MOD expression
    (25) expression -> . expression GREATERTHANEQUAL expression
    (26) expression -> . expression LESSTHANEQUAL expression
    (27) expression -> . expression GREATERTHAN expression
    (28) expression -> . expression LESSTHAN expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression NOTEQUAL expression
    (32) expression -> . expression EQUALS expression
    (33) expression -> . expression IN list
    (34) expression -> . NOT expression
    (35) expression -> . LPAREN expression RPAREN
    (44) expression -> . STRING
    (45) expression -> . REAL
    (46) expression -> . INTEGER
    (47) expression -> . STRING LBRACKET INTEGER RBRACKET
    (48) expression -> . list_index
    (49) expression -> . VARIABLE
    (50) expression -> . VARIABLE LPAREN expression RPAREN
    (51) list_index -> . VARIABLE index_tail
    (52) list_index -> . list index_tail
    (36) list -> . LBRACKET list_elements future_list_elements RBRACKET
    (37) list -> . list PLUS list

    NOT             shift and go to state 26
    LPAREN          shift and go to state 27
    STRING          shift and go to state 28
    REAL            shift and go to state 29
    INTEGER         shift and go to state 30
    VARIABLE        shift and go to state 32
    LBRACKET        shift and go to state 11

    expression                     shift and go to state 34
    list                           shift and go to state 35
    list_index                     shift and go to state 31

state 14

    (5) statement_tail -> statement . statement_tail
    (5) statement_tail -> . statement statement_tail
    (6) statement_tail -> . empty
    (7) statement -> . PRINT LPAREN VARIABLE RPAREN SEMICOLON
    (8) statement -> . PRINT LPAREN STRING RPAREN SEMICOLON
    (9) statement -> . PRINT LPAREN expression RPAREN SEMICOLON
    (10) statement -> . IF LPAREN expression RPAREN block empty
    (11) statement -> . IF LPAREN expression RPAREN block ELSE block
    (12) statement -> . WHILE LPAREN expression RPAREN block
    (13) statement -> . VARIABLE LBRACKET expression RBRACKET ASEQUAL expression SEMICOLON
    (14) statement -> . VARIABLE ASEQUAL expression SEMICOLON
    (15) statement -> . VARIABLE ASEQUAL list_index SEMICOLON
    (16) statement -> . VARIABLE ASEQUAL list SEMICOLON
    (17) statement -> . list
    (56) empty -> .
    (36) list -> . LBRACKET list_elements future_list_elements RBRACKET
    (37) list -> . list PLUS list

    PRINT           shift and go to state 7
    IF              shift and go to state 9
    WHILE           shift and go to state 10
    VARIABLE        shift and go to state 8
    RCURLY          reduce using rule 56 (empty -> .)
    LBRACKET        shift and go to state 11

    statement                      shift and go to state 14
    statement_tail                 shift and go to state 36
    empty                          shift and go to state 16
    list                           shift and go to state 12

state 15

    (2) block -> LCURLY statement statement_tail . RCURLY

    RCURLY          shift and go to state 37


state 16

    (6) statement_tail -> empty .

    RCURLY          reduce using rule 6 (statement_tail -> empty .)


state 17

    (7) statement -> PRINT LPAREN . VARIABLE RPAREN SEMICOLON
    (8) statement -> PRINT LPAREN . STRING RPAREN SEMICOLON
    (9) statement -> PRINT LPAREN . expression RPAREN SEMICOLON
    (18) expression -> . expression POWER expression
    (19) expression -> . expression FLRDIV expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression MOD expression
    (25) expression -> . expression GREATERTHANEQUAL expression
    (26) expression -> . expression LESSTHANEQUAL expression
    (27) expression -> . expression GREATERTHAN expression
    (28) expression -> . expression LESSTHAN expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression NOTEQUAL expression
    (32) expression -> . expression EQUALS expression
    (33) expression -> . expression IN list
    (34) expression -> . NOT expression
    (35) expression -> . LPAREN expression RPAREN
    (44) expression -> . STRING
    (45) expression -> . REAL
    (46) expression -> . INTEGER
    (47) expression -> . STRING LBRACKET INTEGER RBRACKET
    (48) expression -> . list_index
    (49) expression -> . VARIABLE
    (50) expression -> . VARIABLE LPAREN expression RPAREN
    (51) list_index -> . VARIABLE index_tail
    (52) list_index -> . list index_tail
    (36) list -> . LBRACKET list_elements future_list_elements RBRACKET
    (37) list -> . list PLUS list

    VARIABLE        shift and go to state 38
    STRING          shift and go to state 39
    NOT             shift and go to state 26
    LPAREN          shift and go to state 27
    REAL            shift and go to state 29
    INTEGER         shift and go to state 30
    LBRACKET        shift and go to state 11

    expression                     shift and go to state 40
    list                           shift and go to state 35
    list_index                     shift and go to state 31

state 18

    (13) statement -> VARIABLE LBRACKET . expression RBRACKET ASEQUAL expression SEMICOLON
    (18) expression -> . expression POWER expression
    (19) expression -> . expression FLRDIV expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression MOD expression
    (25) expression -> . expression GREATERTHANEQUAL expression
    (26) expression -> . expression LESSTHANEQUAL expression
    (27) expression -> . expression GREATERTHAN expression
    (28) expression -> . expression LESSTHAN expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression NOTEQUAL expression
    (32) expression -> . expression EQUALS expression
    (33) expression -> . expression IN list
    (34) expression -> . NOT expression
    (35) expression -> . LPAREN expression RPAREN
    (44) expression -> . STRING
    (45) expression -> . REAL
    (46) expression -> . INTEGER
    (47) expression -> . STRING LBRACKET INTEGER RBRACKET
    (48) expression -> . list_index
    (49) expression -> . VARIABLE
    (50) expression -> . VARIABLE LPAREN expression RPAREN
    (51) list_index -> . VARIABLE index_tail
    (52) list_index -> . list index_tail
    (36) list -> . LBRACKET list_elements future_list_elements RBRACKET
    (37) list -> . list PLUS list

    NOT             shift and go to state 26
    LPAREN          shift and go to state 27
    STRING          shift and go to state 28
    REAL            shift and go to state 29
    INTEGER         shift and go to state 30
    VARIABLE        shift and go to state 32
    LBRACKET        shift and go to state 11

    expression                     shift and go to state 41
    list                           shift and go to state 35
    list_index                     shift and go to state 31

state 19

    (14) statement -> VARIABLE ASEQUAL . expression SEMICOLON
    (15) statement -> VARIABLE ASEQUAL . list_index SEMICOLON
    (16) statement -> VARIABLE ASEQUAL . list SEMICOLON
    (18) expression -> . expression POWER expression
    (19) expression -> . expression FLRDIV expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression MOD expression
    (25) expression -> . expression GREATERTHANEQUAL expression
    (26) expression -> . expression LESSTHANEQUAL expression
    (27) expression -> . expression GREATERTHAN expression
    (28) expression -> . expression LESSTHAN expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression NOTEQUAL expression
    (32) expression -> . expression EQUALS expression
    (33) expression -> . expression IN list
    (34) expression -> . NOT expression
    (35) expression -> . LPAREN expression RPAREN
    (44) expression -> . STRING
    (45) expression -> . REAL
    (46) expression -> . INTEGER
    (47) expression -> . STRING LBRACKET INTEGER RBRACKET
    (48) expression -> . list_index
    (49) expression -> . VARIABLE
    (50) expression -> . VARIABLE LPAREN expression RPAREN
    (51) list_index -> . VARIABLE index_tail
    (52) list_index -> . list index_tail
    (36) list -> . LBRACKET list_elements future_list_elements RBRACKET
    (37) list -> . list PLUS list

    NOT             shift and go to state 26
    LPAREN          shift and go to state 27
    STRING          shift and go to state 28
    REAL            shift and go to state 29
    INTEGER         shift and go to state 30
    VARIABLE        shift and go to state 32
    LBRACKET        shift and go to state 11

    expression                     shift and go to state 42
    list_index                     shift and go to state 43
    list                           shift and go to state 44

state 20

    (10) statement -> IF LPAREN . expression RPAREN block empty
    (11) statement -> IF LPAREN . expression RPAREN block ELSE block
    (18) expression -> . expression POWER expression
    (19) expression -> . expression FLRDIV expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression MOD expression
    (25) expression -> . expression GREATERTHANEQUAL expression
    (26) expression -> . expression LESSTHANEQUAL expression
    (27) expression -> . expression GREATERTHAN expression
    (28) expression -> . expression LESSTHAN expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression NOTEQUAL expression
    (32) expression -> . expression EQUALS expression
    (33) expression -> . expression IN list
    (34) expression -> . NOT expression
    (35) expression -> . LPAREN expression RPAREN
    (44) expression -> . STRING
    (45) expression -> . REAL
    (46) expression -> . INTEGER
    (47) expression -> . STRING LBRACKET INTEGER RBRACKET
    (48) expression -> . list_index
    (49) expression -> . VARIABLE
    (50) expression -> . VARIABLE LPAREN expression RPAREN
    (51) list_index -> . VARIABLE index_tail
    (52) list_index -> . list index_tail
    (36) list -> . LBRACKET list_elements future_list_elements RBRACKET
    (37) list -> . list PLUS list

    NOT             shift and go to state 26
    LPAREN          shift and go to state 27
    STRING          shift and go to state 28
    REAL            shift and go to state 29
    INTEGER         shift and go to state 30
    VARIABLE        shift and go to state 32
    LBRACKET        shift and go to state 11

    expression                     shift and go to state 45
    list                           shift and go to state 35
    list_index                     shift and go to state 31

state 21

    (12) statement -> WHILE LPAREN . expression RPAREN block
    (18) expression -> . expression POWER expression
    (19) expression -> . expression FLRDIV expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression MOD expression
    (25) expression -> . expression GREATERTHANEQUAL expression
    (26) expression -> . expression LESSTHANEQUAL expression
    (27) expression -> . expression GREATERTHAN expression
    (28) expression -> . expression LESSTHAN expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression NOTEQUAL expression
    (32) expression -> . expression EQUALS expression
    (33) expression -> . expression IN list
    (34) expression -> . NOT expression
    (35) expression -> . LPAREN expression RPAREN
    (44) expression -> . STRING
    (45) expression -> . REAL
    (46) expression -> . INTEGER
    (47) expression -> . STRING LBRACKET INTEGER RBRACKET
    (48) expression -> . list_index
    (49) expression -> . VARIABLE
    (50) expression -> . VARIABLE LPAREN expression RPAREN
    (51) list_index -> . VARIABLE index_tail
    (52) list_index -> . list index_tail
    (36) list -> . LBRACKET list_elements future_list_elements RBRACKET
    (37) list -> . list PLUS list

    NOT             shift and go to state 26
    LPAREN          shift and go to state 27
    STRING          shift and go to state 28
    REAL            shift and go to state 29
    INTEGER         shift and go to state 30
    VARIABLE        shift and go to state 32
    LBRACKET        shift and go to state 11

    expression                     shift and go to state 46
    list                           shift and go to state 35
    list_index                     shift and go to state 31

state 22

    (36) list -> LBRACKET list_elements . future_list_elements RBRACKET
    (41) future_list_elements -> . COMMA expression future_list_elements
    (42) future_list_elements -> . COMMA list future_list_elements
    (43) future_list_elements -> . empty_list
    (55) empty_list -> .

    COMMA           shift and go to state 48
    RBRACKET        reduce using rule 55 (empty_list -> .)

    future_list_elements           shift and go to state 47
    empty_list                     shift and go to state 49

state 23

    (38) list_elements -> expression .
    (18) expression -> expression . POWER expression
    (19) expression -> expression . FLRDIV expression
    (20) expression -> expression . TIMES expression
    (21) expression -> expression . DIVIDE expression
    (22) expression -> expression . PLUS expression
    (23) expression -> expression . MINUS expression
    (24) expression -> expression . MOD expression
    (25) expression -> expression . GREATERTHANEQUAL expression
    (26) expression -> expression . LESSTHANEQUAL expression
    (27) expression -> expression . GREATERTHAN expression
    (28) expression -> expression . LESSTHAN expression
    (29) expression -> expression . AND expression
    (30) expression -> expression . OR expression
    (31) expression -> expression . NOTEQUAL expression
    (32) expression -> expression . EQUALS expression
    (33) expression -> expression . IN list

    COMMA           reduce using rule 38 (list_elements -> expression .)
    RBRACKET        reduce using rule 38 (list_elements -> expression .)
    POWER           shift and go to state 50
    FLRDIV          shift and go to state 51
    TIMES           shift and go to state 52
    DIVIDE          shift and go to state 53
    PLUS            shift and go to state 54
    MINUS           shift and go to state 55
    MOD             shift and go to state 56
    GREATERTHANEQUAL shift and go to state 57
    LESSTHANEQUAL   shift and go to state 58
    GREATERTHAN     shift and go to state 59
    LESSTHAN        shift and go to state 60
    AND             shift and go to state 61
    OR              shift and go to state 62
    NOTEQUAL        shift and go to state 63
    EQUALS          shift and go to state 64
    IN              shift and go to state 65


state 24

    (39) list_elements -> list .
    (37) list -> list . PLUS list
    (52) list_index -> list . index_tail
    (53) index_tail -> . LBRACKET expression RBRACKET index_tail
    (54) index_tail -> . empty
    (56) empty -> .

  ! shift/reduce conflict for PLUS resolved as shift
  ! reduce/reduce conflict for COMMA resolved using rule 39 (list_elements -> list .)
  ! reduce/reduce conflict for RBRACKET resolved using rule 39 (list_elements -> list .)
    COMMA           reduce using rule 39 (list_elements -> list .)
    RBRACKET        reduce using rule 39 (list_elements -> list .)
    PLUS            shift and go to state 33
    LBRACKET        shift and go to state 67
    POWER           reduce using rule 56 (empty -> .)
    FLRDIV          reduce using rule 56 (empty -> .)
    TIMES           reduce using rule 56 (empty -> .)
    DIVIDE          reduce using rule 56 (empty -> .)
    MINUS           reduce using rule 56 (empty -> .)
    MOD             reduce using rule 56 (empty -> .)
    GREATERTHANEQUAL reduce using rule 56 (empty -> .)
    LESSTHANEQUAL   reduce using rule 56 (empty -> .)
    GREATERTHAN     reduce using rule 56 (empty -> .)
    LESSTHAN        reduce using rule 56 (empty -> .)
    AND             reduce using rule 56 (empty -> .)
    OR              reduce using rule 56 (empty -> .)
    NOTEQUAL        reduce using rule 56 (empty -> .)
    EQUALS          reduce using rule 56 (empty -> .)
    IN              reduce using rule 56 (empty -> .)

  ! PLUS            [ reduce using rule 56 (empty -> .) ]
  ! COMMA           [ reduce using rule 56 (empty -> .) ]
  ! RBRACKET        [ reduce using rule 56 (empty -> .) ]

    index_tail                     shift and go to state 66
    empty                          shift and go to state 68

state 25

    (40) list_elements -> empty .

    COMMA           reduce using rule 40 (list_elements -> empty .)
    RBRACKET        reduce using rule 40 (list_elements -> empty .)


state 26

    (34) expression -> NOT . expression
    (18) expression -> . expression POWER expression
    (19) expression -> . expression FLRDIV expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression MOD expression
    (25) expression -> . expression GREATERTHANEQUAL expression
    (26) expression -> . expression LESSTHANEQUAL expression
    (27) expression -> . expression GREATERTHAN expression
    (28) expression -> . expression LESSTHAN expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression NOTEQUAL expression
    (32) expression -> . expression EQUALS expression
    (33) expression -> . expression IN list
    (34) expression -> . NOT expression
    (35) expression -> . LPAREN expression RPAREN
    (44) expression -> . STRING
    (45) expression -> . REAL
    (46) expression -> . INTEGER
    (47) expression -> . STRING LBRACKET INTEGER RBRACKET
    (48) expression -> . list_index
    (49) expression -> . VARIABLE
    (50) expression -> . VARIABLE LPAREN expression RPAREN
    (51) list_index -> . VARIABLE index_tail
    (52) list_index -> . list index_tail
    (36) list -> . LBRACKET list_elements future_list_elements RBRACKET
    (37) list -> . list PLUS list

    NOT             shift and go to state 26
    LPAREN          shift and go to state 27
    STRING          shift and go to state 28
    REAL            shift and go to state 29
    INTEGER         shift and go to state 30
    VARIABLE        shift and go to state 32
    LBRACKET        shift and go to state 11

    expression                     shift and go to state 69
    list                           shift and go to state 35
    list_index                     shift and go to state 31

state 27

    (35) expression -> LPAREN . expression RPAREN
    (18) expression -> . expression POWER expression
    (19) expression -> . expression FLRDIV expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression MOD expression
    (25) expression -> . expression GREATERTHANEQUAL expression
    (26) expression -> . expression LESSTHANEQUAL expression
    (27) expression -> . expression GREATERTHAN expression
    (28) expression -> . expression LESSTHAN expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression NOTEQUAL expression
    (32) expression -> . expression EQUALS expression
    (33) expression -> . expression IN list
    (34) expression -> . NOT expression
    (35) expression -> . LPAREN expression RPAREN
    (44) expression -> . STRING
    (45) expression -> . REAL
    (46) expression -> . INTEGER
    (47) expression -> . STRING LBRACKET INTEGER RBRACKET
    (48) expression -> . list_index
    (49) expression -> . VARIABLE
    (50) expression -> . VARIABLE LPAREN expression RPAREN
    (51) list_index -> . VARIABLE index_tail
    (52) list_index -> . list index_tail
    (36) list -> . LBRACKET list_elements future_list_elements RBRACKET
    (37) list -> . list PLUS list

    NOT             shift and go to state 26
    LPAREN          shift and go to state 27
    STRING          shift and go to state 28
    REAL            shift and go to state 29
    INTEGER         shift and go to state 30
    VARIABLE        shift and go to state 32
    LBRACKET        shift and go to state 11

    expression                     shift and go to state 70
    list                           shift and go to state 35
    list_index                     shift and go to state 31

state 28

    (44) expression -> STRING .
    (47) expression -> STRING . LBRACKET INTEGER RBRACKET

    POWER           reduce using rule 44 (expression -> STRING .)
    FLRDIV          reduce using rule 44 (expression -> STRING .)
    TIMES           reduce using rule 44 (expression -> STRING .)
    DIVIDE          reduce using rule 44 (expression -> STRING .)
    PLUS            reduce using rule 44 (expression -> STRING .)
    MINUS           reduce using rule 44 (expression -> STRING .)
    MOD             reduce using rule 44 (expression -> STRING .)
    GREATERTHANEQUAL reduce using rule 44 (expression -> STRING .)
    LESSTHANEQUAL   reduce using rule 44 (expression -> STRING .)
    GREATERTHAN     reduce using rule 44 (expression -> STRING .)
    LESSTHAN        reduce using rule 44 (expression -> STRING .)
    AND             reduce using rule 44 (expression -> STRING .)
    OR              reduce using rule 44 (expression -> STRING .)
    NOTEQUAL        reduce using rule 44 (expression -> STRING .)
    EQUALS          reduce using rule 44 (expression -> STRING .)
    IN              reduce using rule 44 (expression -> STRING .)
    COMMA           reduce using rule 44 (expression -> STRING .)
    RBRACKET        reduce using rule 44 (expression -> STRING .)
    RPAREN          reduce using rule 44 (expression -> STRING .)
    SEMICOLON       reduce using rule 44 (expression -> STRING .)
    LBRACKET        shift and go to state 71


state 29

    (45) expression -> REAL .
